// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile message button test Test not present 1`] = `
<div
  aria-haspopup="dialog"
  className="flyout-trigger nti-button message message-button-flyout flyout-closed"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  tabIndex={0}
>
  <span>
    <div
      className="icon"
    />
    <span
      className="text"
    >
      Message
    </span>
  </span>
</div>
`;

exports[`User profile message button test Test present 1`] = `
<div
  className="nti-link-to-path"
  to="#"
>
  <div
    className="nti-button message available"
  >
    <div
      className="icon"
    />
    <span
      className="text"
    >
      Message
    </span>
  </div>
</div>
`;
